<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PneumaticAxisConfig" Id="{0cf5a73f-3f7b-4191-a68d-fd09f581360b}">
    <Declaration><![CDATA[TYPE ST_PneumaticAxisConfig :
STRUCT
    nTimeToExtend: INT; //User defined time for the cylider to extract in seconds
    nTimeToRetract: INT; //User defined time for the cylinder to retract in seconds
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>