<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PneumaticAxisControl" Id="{60247fff-ef28-4c35-9aa0-027d94fb1099}">
    <Declaration><![CDATA[TYPE ST_PneumaticAxisControl :
STRUCT
    bExtend: BOOL; //Variable to control solenoid valve from PLC
    bRetract: BOOL; //Variable to control solenoid valve from PLC
    bInterlock: BOOL; //Input interlock signal for the movement
    bReset: BOOL; //Reset signal from EPICS
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>