<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PneumaticAxisOutputs" Id="{51effe12-4bc0-43e3-b66e-2952d0306c78}">
    <Declaration><![CDATA[TYPE ST_PneumaticAxisOutputs :
STRUCT
    bEndSwitchFwdOn AT %Q*: BOOL; //End Switch Fwd power output
    bEndSwitchBwdOn AT %Q*: BOOL; //End Switch Bwd power output
    bValveOn AT %Q*: BOOL; //Output of the solenoid valve (for single solenoid)
    bPressureExtendOn AT %Q*: BOOL; //Power output for air pressure switch
    bPressureRetractOn AT %Q*: BOOL; //Power output for air pressure switch
    fAirPressureOn AT %Q*: REAL; //Power output for analog pressure sensor
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>